[tool.poetry]
name = "doe"
version = "0.1.0"
description = ""
authors = ["mleader <mleader@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
ryaml = "^0.2.0"
toml = "^0.10.2"
openshift = "^0.12.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
